# master-weaver-autopilot-starter

./: .claude-sync.json  .dockerignore  .gitignore  CLAUDE.md  ClassDiagram.drawio  NetworkUML.drawio  README.md  activityDiagram.drawio  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  readme.md
.claude/: developer.json  mcp.json  settings.json
docs/: Leitfaden-CT-Workflow.md
python/ctpc-api/: .env.example  README.md  WerthAutopilot.py  WerthAutopilot.spec  build.bat  build.sh  pyproject.toml
python/ctpc-api/src/: main.py
python/ctpc-api/src/analysis/: __init__.py  deviation_report.py  soll_ist.py
python/ctpc-api/src/api/: routes.py  ws.py
python/ctpc-api/src/discovery/: models.py  network_scanner.py
python/ctpc-api/src/events/: __init__.py  zle_publisher.py
python/ctpc-api/src/notifications/: email_notify.py
python/ctpc-api/src/optical/: __init__.py  bg_whiten.py  border_detection.py
python/ctpc-api/src/orchestrator/: __init__.py  folder_manager.py  scan_machine.py  states.py  stl_export.py  transitions.py
python/ctpc-api/src/queue/: task_queue.py
python/ctpc-api/src/timetracking/: models.py  tracker.py
python/ctpc-api/src/winwerth/: __init__.py  config.py  controller.py  error_correction.py  menu_detection.py  mouse.py  pixel_check.py  profile.py  pywinauto_bridge.py  pywinauto_controls.py  rotation.py  tube.py  win_api.py
python/ctpc-api/tests/: test_routes.py  test_scan_machine.py  test_soll_ist.py
scripts/: flash-pi.sh
source/: after_scan.py  all_buttons.py  all_rec_buttons.py  auftrag_plain  auto_connect.py  freezer.py  (+14 more)
(+258 files in other folders)
